--- a/lab3/lab3.tex
+++ b/lab3/lab3.tex
@@ -80,8 +80,8 @@
 
 \section{Теоретические положения.}
 \subsection{Линейный дискретный фильтр.}
-\textit{Линейный фильтр} -- динамическая система, применяющая некий линейный оператор ко входному сигналу для выделения или подавления определённых частот сигнала и других функций по обработке входного сигнала. Линейные фильтры широко применяются в электронике, цифровой обработке сигналов и изображений, в оптике, теории управления и других областях.
-Наиболее часто они используются для того, чтобы подавить нежелательные частоты входного сигнала или для того чтобы выделить нужную полосу частот в сигнале.
+\textit{Линейный фильтр} -- динамическая система, применяющая линейный оператор ко входному сигналу для выделения или подавления определённых частот сигнала и других функций по обработке входного сигнала. Линейные фильтры широко применяются в электронике, цифровой обработке сигналов и изображений, в оптике, теории управления и других областях.
+Наиболее часто они используются для того, чтобы удалить некоторые частоты входного сигнала или для того чтобы выделить необходимую полосу частот в сигнале.
 
 \textit{Линейный дискретный фильтр} – это произвольная система обработки дискретного сигнала, обладающая свойствами линейности и стационарности.
 
